Iframes overflow solved

--- a/Docsite_CSS/component_sec.css
+++ b/Docsite_CSS/component_sec.css
@@ -36,6 +36,7 @@
     padding: 1rem .5rem;
     display: flex;
     justify-content: center;
+    overflow: auto;
 }
 
 .code-snippet-multiple{
